accept incoming changes

--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -1,81 +1,42 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Deborah's Story</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-      crossorigin="anonymous"
-    />
-
-    <link href="../CSS/story1.css" rel="stylesheet" />
-
-    <link
-      rel="stylesheet"
-      href="path/to/font-awesome/css/font-awesome.min.css"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  
+    <link href="../CSS/story1.css" rel="stylesheet">
+  
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container-md">
           <a class="navbar-brand" href="../HTML/index.html"><h2 class="logo">IP-G2</h2></a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a
-                  class="nav-link active"
-                  aria-current="page"
-                  href="../HTML/index.html"
-                  >Home</a
-                >
+                <a class="nav-link active" aria-current="page" href="../HTML/index.html">Home</a>
               </li>
               <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="navbarDropdown"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Our Stories
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li>
-                    <a class="dropdown-item" href="#">Deborah Ama Paintsil</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="#">Josephine Ekhator</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="#"
-                      >Justus Wamswa Chemirmir</a
-                    >
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="#">Mangaliso Dlamini</a>
-                  </li>
+                  <li><a class="dropdown-item" href="../HTML/story1.html">Deborah Ama Paintsil</a></li>
+                  <li><a class="dropdown-item" href="#">Josephine Ekhator</a></li>
+                  <li><a class="dropdown-item" href="#">Justus Wamswa Chemirmir</a></li>
+                  <li><a class="dropdown-item" href="#">Mangaliso Dlamini</a></li>
                   <li><a class="dropdown-item" href="#">Kevin Langat</a></li>
                 </ul>
               </li>
               <li class="nav-item">
                 <a class="nav-link">The Author</a>
-              </li> 
+              </li>
             </ul>
           </div>
         </div>
@@ -128,7 +89,7 @@
                 I took the test that I saw after reading and later received an
                 email talking about how they like my drive and passion. I felt
                 this is an institution that has been able to identify the needs
-                of an individual through a test. And so, i decided to apply to
+                of an individual through a test. And so, I decided to apply to
                 study there <br />
                 It has always been my dream to help the people in my community
                 and country at large, so after reading the dreams and goal of
@@ -300,6 +261,30 @@
             </div>
           </div>
         </div>
+
+        <div class="col-sm-4 col-md-4 py-3">
+          <div class="card cb1">
+            <div class="card-body">
+              <span class="card-number fw-bold">03</span>
+              <h5 class="card-title py-3">My Country</h5>
+              <p>
+                I can sometimes be seen as a boring person because I love to be
+                by myself either watching a movie or doing some basic stuffs. So
+                far I have tried to become more sociable rather than being an
+                introvert. <br />
+                Most people tend to think I am an introvert and others too an
+                extrovert. I love spending time alone and doing things that
+                excite me the most. But I have some social life that includes
+                both personal and professional interactions. I see it as an
+                element of learning, joy, self-fulfillment and personal
+                resilience. I love working as a team with my peers groups and
+                friends because I see it as a way of learning from people. I
+                spend time with friends, example friends with the same interest
+                
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -320,11 +305,10 @@
         </div>
       </div>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"
-      integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D"
-      crossorigin="anonymous"
-      async
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
+  
+  
   </body>
 </html>
