accept incoming changes

--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -36,14 +36,8 @@
                   Our Stories
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-<<<<<<< HEAD
-                  <li><a class="dropdown-item" href="../HTML/story1.html">Deborah Ama Paintsil</a></li>
-                  <li><a class="dropdown-item" href="#">Josephine Ekhator</a></li>
-                  <li><a class="dropdown-item" href="#">Justus Wamswa Chemirmir</a></li>
-                  <li><a class="dropdown-item" href="#">Mangaliso Dlamini</a></li>
-=======
                   <li>
-                    <a class="dropdown-item" href="#">Deborah Ama Paintsil</a>
+                    <a class="dropdown-item" href="../HTML/story1.html">Deborah Ama Paintsil</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="#">Josephine Nation Ekhator</a>
@@ -55,7 +49,6 @@
                   <li>
                     <a class="dropdown-item" href="#">Mangaliso Dlamini</a>
                   </li>
->>>>>>> d93c682bb5825bbeeba4c7d858ebb897e1392c41
                   <li><a class="dropdown-item" href="#">Kevin Langat</a></li>
                 </ul>
               </li>
