--- a/HTML/story2.html
+++ b/HTML/story2.html
@@ -206,7 +206,7 @@
       </div>
     </div>
     <div class="container container3">
-      <div class="row g-3 mt-3">
+      <div class="row g-3 mt-3 mb-3">
         <div class="col-12 col-md-6 col-lg-4">
           <div class="card">
             <img src="../IMAGES/ALU1.jpg" class="card-img-top" alt="...">
