--- a/HTML/story2.html
+++ b/HTML/story2.html
@@ -10,7 +10,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" 
-    crossorigin="anonymous">   
+    crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">   
 </head>
 
 <body>
@@ -141,7 +142,13 @@
                 Some quick example text to build on the card title and make up the bulk of the card's content
                 Some quick example text to build on the card title and make up the bulk of the card's content
                 Some quick example text to build on the card title and make up the bulk of the card's content
-                .</p>
+                </p>
+                <ul class="list-unstyled list-inline">
+                  <li class="list-inline-item">
+                    <a href="#" class="btn-floating btn-sm text-blue" style="font-size: 20px;"><i class="fab fa-facebook"></i></a>
+                  </li>
+                </ul>
+
             </div>
           </div>
         </div>
