add changes made

--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -40,7 +40,7 @@
                     <a class="dropdown-item" href="../HTML/story1.html">Deborah Ama Paintsil</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#">Josephine Nation Ekhator</a>
+                    <a class="dropdown-item" href="../HTML/story2.html">Josephine Nation Ekhator</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="#"
@@ -150,6 +150,8 @@
                 for self learning and also make good use of all the
                 opportunities given to them.
               </p>
+              <img src="../IMAGES/ALUNIGHT.webp" alt="ALU AT NIGHT" class="img-fluid py-3">
+              <p class="Notes">What I can say is that it is an <span>ADVENTUROUS PLACE!!</span></p>
               <a href="#" class="btn btn-primary">Resume</a>
             </div>
           </div>
@@ -157,7 +159,7 @@
         <div class="col-sm-4 col-md-4 py-3">
           <div class="card cb1">
             <div class="card-body ">
-              <span class="card-number fw-bold">05</span>
+              <span class="card-number fw-bold">06</span>
               <h5 class="card-title py-3">Social Life</h5>
               <p>
                 I can sometimes be seen as a boring person because I love to be
@@ -184,34 +186,28 @@
               <span class="card-number fw-bold">02</span>
               <h5 class="card-title py-3">Background</h5>
               <p>
-                I can sometimes be seen as a boring person because I love to be
-                by myself either watching a movie or doing some basic stuffs. So
-                far I have tried to become more sociable rather than being an
-                introvert. <br />
-                Most people tend to think I am an introvert and others too an
-                extrovert. I love spending time alone and doing things that
-                excite me the most. But I have some social life that includes
-                both personal and professional interactions. I see it as an
-                element of learning, joy, self-fulfillment and personal
-                resilience. I love working as a team with my peers groups and
-                friends because I see it as a way of learning from people. I
-                spend time with friends, example friends with the same interest
-                as me. I love to listen to people so I can hear diverse ideas of
-                people about life.
-                element of learning, joy, self-fulfillment and personal
-                resilience. I love working as a team with my peers groups and
-                friends because I see it as a way of learning from people. I
-                spend time with friends, example friends with the same interest
-                as me. I love to listen to people so I can hear diverse ideas of
-                people about life.
+                I am a Ghanaian and I am from the Central Region of Ghana but I 
+                reside in Ashaiman, a district in the Greater Accra Region. <br>
+                I can say I'm about 1.5m tall and weigh 60kg, which was a total shock to me <br />
+                My father's name is Robert Mensah Paintsil and my mom is Mercy Mensah Paintsil.
+                I am the 3rd of their six children. I love beans with red oil and fried plantain
+                I love watching movies, singing and reading. 
+                I stay closer to a water body called the Ashaiman Dam. The community I reside in is a suburb
+                of Ashaiman called Jordan Village. Life at Jordan Village is not a bed of roses.
+                I wish to be a role model to most of the ladies and girls in my neighbourhood because of
+                how events turn out in our lives during growth. Some gets pregnant before they complete Junior High school
+                whiles others learn to trade and get married after they complete Senior High School.
               </p>
+              <h3>Some pictures of Jordan Village</h3>
+              <img src="../IMAGES/Dam.jpg" alt="Ashaiman-Dam" class="img-fluid">
+              <img src="../IMAGES/Park.jpg" alt="Park" class="img-fluid">
             </div>
           </div>
         </div>
         <div class="col-sm-4 col-md-4 py-3">
           <div class="card cb1">
             <div class="card-body">
-              <span class="card-number fw-bold">06</span>
+              <span class="card-number fw-bold">07</span>
               <h5 class="card-title py-3">Ideas For the Future & Careers</h5>
               <p>
                 I can sometimes be seen as a boring person because I love to be
@@ -251,6 +247,14 @@
                 friends because I see it as a way of learning from people. I
                 spend time with friends, example friends with the same interest
                 as me. I love to listen to people so I can hear diverse ideas of
+                extrovert. I love spending time alone and doing things that
+                excite me the most. But I have some social life that includes
+                both personal and professional interactions. I see it as an
+                element of learning, joy, self-fulfillment and personal
+                resilience. I love working as a team with my peers groups and
+                friends because I see it as a way of learning from people. I
+                spend time with friends, example friends with the same interest
+                as me. I love to listen to people so I can hear diverse ideas of
                 
               </p>
             </div>
@@ -262,20 +266,33 @@
               <span class="card-number fw-bold">03</span>
               <h5 class="card-title py-3">My Country</h5>
               <p>
-                I can sometimes be seen as a boring person because I love to be
-                by myself either watching a movie or doing some basic stuffs. So
-                far I have tried to become more sociable rather than being an
-                introvert. <br />
-                Most people tend to think I am an introvert and others too an
-                extrovert. I love spending time alone and doing things that
-                excite me the most. But I have some social life that includes
-                both personal and professional interactions. I see it as an
-                element of learning, joy, self-fulfillment and personal
-                resilience. I love working as a team with my peers groups and
-                friends because I see it as a way of learning from people. I
-                spend time with friends, example friends with the same interest
-                
+                Ghana was the First Sub-Saharan Country in Africa to Gain Independence.
+                One of the fascinating historical facts about Ghana is that it achieved complete independence for the first time in Sub-Saharan Africa in 1957. 
+                Ghana was created by joining the Togoland trust with the former British Gold Coast area. <br />                
               </p>
+              <h3>Historical Places in Ghana</h3>
+              <img src="../IMAGES/Kwame.webp" alt="Kwame Nkrumah" class="img-fluid">
+              <p class="Note mt-4">
+                On the site of a former British polo field where Ghana's independence was proclaimed in 1957, Kwame Nkrumah Memorial Park was constructed. 
+                The Mausoleum, a majestic marble monument, serves as both the final resting place for Fathia Nkrumah and the first President of Ghana.
+              </p>
+              <img src="../IMAGES/Elmina.webp" alt="Elimina Castle" class="img-fluid mt-4">
+              <p class="Note mt-4">
+                Elmina Castle which was built in 1482 by Portuguese conquerors is one of the best preserved forts along the Ghanaian coast. After first being a 
+                camp for weapons and resources such as gold and ivory it became a depot for slaves when the slave trade massively increased towards the end of the 17th century.
+              </p>
+              <img src="../IMAGES/Kakum.jpg" alt="Kakum National Park" class="img-fluid mt-4">
+              <p class="Note mt-4">
+                Tucked away in the Assin Attandanso Reserve is the Kakum National Park and Canopy Walkway that offers visitors spectacular scenery and a fascinating wildlife experience 
+                along with modern camping facilities. The park’s best-known feature is undoubtedly its 7 suspension bridges which form a 333-meter long canopy walkway, suspended up to 27 meters above the forest floor from trees that are over 300 years old.
+              </p>
+              <h3 class="py-3">Indigenous Ghanaian dishes</h3>
+              <p class="Note mt-2">Banku with Pepper and Grilled Tilapia</p>
+              <img src="../IMAGES/banku.jpg" alt="Banku" class="img-fluid">
+              <p class="Note mt-4">Beans with Red Oil and Fried Plantain</p>
+              <img src="../IMAGES/beans.jpg" alt="Beans" class="img-fluid">
+              <p class="Note mt-4">Fufu with Light Soup and Assorted Meat</p>
+              <img src="../IMAGES/fufu.jpg" alt="Fufu" class="img-fluid">
             </div>
           </div>
         </div>
@@ -283,8 +300,8 @@
         <div class="col-sm-4 col-md-4 py-3">
           <div class="card cb1">
             <div class="card-body">
-              <span class="card-number fw-bold">03</span>
-              <h5 class="card-title py-3">My Country</h5>
+              <span class="card-number fw-bold">05</span>
+              <h5 class="card-title py-3">Life in Mauritius</h5>
               <p>
                 I can sometimes be seen as a boring person because I love to be
                 by myself either watching a movie or doing some basic stuffs. So
