--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -254,7 +254,7 @@
                 resilience. I love working as a team with my peers groups and
                 friends because I see it as a way of learning from people. I
                 spend time with friends, example friends with the same interest
-                as me. I love to listen to people so I can hear diverse ideas of
+                as me. I love to listen to people so I can hear diverse ideas ofm 
                 
               </p>
             </div>
