--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -151,7 +151,7 @@
                 opportunities given to them.
               </p>
               <img src="../IMAGES/ALUNIGHT.webp" alt="ALU AT NIGHT" class="img-fluid py-3">
-              <p class="Notes">What I can say is that it is an <span>ADVENTUROUS PLACE!!</span></p>
+              <p class="Notes">What I can say is that it is an <span class="place">ADVENTUROUS PLACE!!</span></p>
               <a href="#" class="btn btn-primary">Resume</a>
             </div>
           </div>
@@ -196,7 +196,9 @@
                 of Ashaiman called Jordan Village. Life at Jordan Village is not a bed of roses.
                 I wish to be a role model to most of the ladies and girls in my neighbourhood because of
                 how events turn out in our lives during growth. Some gets pregnant before they complete Junior High school
-                whiles others learn to trade and get married after they complete Senior High School.
+                whiles others learn to trade and get married after they complete Senior High School. <br>
+                I am a past student of the Tema Methodist Day Senior High School, Ghana.  I was offering
+                Bsc Mathematical Sciences in the University of Ghana, Legon and stopped in my 2nd year to continue schooling in Mauritius.
               </p>
               <h3>Some pictures of Jordan Village</h3>
               <img src="../IMAGES/Dam.jpg" alt="Ashaiman-Dam" class="img-fluid">
