add new changes

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -69,35 +69,34 @@
         <section class="section4">
             <div class="jumbotron journey-begin-jumbotron">
                 <div class="container-md">
-                    <div class="row">
-                        <div class="heading heading1">
-                            <h1>The Beginning</h1>
-                            <div class="underline underline2"></div>
-                        </div>
-                    </div>
-
-                    <div class="row image-row align-items-center justify-content-evenly">
-                        
-                        <div class="col-md-4 mt-4">
-                            <div class="pt-5">
-                                <h3 class="p-3">Small Beginnings They Say</h3>
-                                <p class="p-3">It started when we saw that we can be a change maker in the world we live in.
-                                    True or not!!
-                                    We realized that we can become a pillar that will define our world some day!!</p>
-                                <p class="mt-4 p-3">
-                                    <a href="#" class="btn btn-outline-warning stories-button">The Author</a>
-                                </p>
+                    <div class="row mb-5">
+                        <div class="col-md-12 began">
+                            <div class=" heading heading1">
+                                <h1>The Beginning</h1>
+                                <div class="underline underline1"></div>
                             </div>
                         </div>
+                    </div>
+        
+                    <div class="row image-row align-items-center justify-content-center mb-5">
                         <div class="col-md-6" style="position: relative;">
                             <img src="../IMAGES/ALU1.jpg" alt="ALU" class="img-fluid picture-ALU">
                             <img src="../IMAGES/ALU2.jpg" class="ALU images-ALU">
                         </div>
+                        <div class="col-md-6">
+                         <div class="ps-5">
+                            <h3>Small Beginnings They Say</h3>
+                            <p>It started when we saw that we can be a change maker in the world we live in.
+                            True or not!!
+                            We realized that we can become a pillar that will define our world some day!!</p>
+                            <p class="mt-4">
+                                <a href="#" class="btn btn-outline-warning stories-button">The Author</a>
+                            </p>
+                         </div>
+                        </div>
                     </div>
-                    <div class="down-arrow"></div>
                 </div>
             </div>
-
         </section>
 
 
@@ -136,7 +135,6 @@
                     </div>
                 </div>
             </div>
-            <div class="down-arrow"></div>
 
         </section>
 
