add new changes

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -19,11 +19,11 @@
             <nav class="navbar navbar-expand-lg">
                 <div class="container-md">
                     <a class="navbar-brand" href="../HTML/index.html">
-                        <h2 class="logo">IP-G2</h2>
+                        <h2 class="logo g2">IP-G2</h2>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                        aria-expanded="false" aria-label="Toggle navigation"> 
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -71,10 +71,8 @@
                 <div class="container-md">
                     <div class="row mb-5">
                         <div class="col-md-12 began">
-                            <div class=" heading heading1">
                                 <h1>The Beginning</h1>
                                 <div class="underline underline1"></div>
-                            </div>
                         </div>
                     </div>
         
