--- a/HTML/index.html
+++ b/HTML/index.html
@@ -18,41 +18,43 @@
         <section class="section1">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-md">
-                    <a class="navbar-brand" href="../HTML/index.html">
-                        <h2 class="logo g2">IP-G2</h2>
-                    </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation"> 
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown"
-                                    role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Our Stories
-                                </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="../HTML/story1.html">Deborah Ama Paintsil</a>
-                                    </li>
-                                    <li><a class="dropdown-item" href="../HTML/story2.html">Josephine Nation Ekhator</a>
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Justus Wamswa Chemirmir</a></li>
-                                    <li><a class="dropdown-item" href="#">Mangaliso Dlamini</a></li>
-                                    <li><a class="dropdown-item" href="#">Kevin Langat</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="#">The Author</a>
-                            </li>
+                  <a class="navbar-brand" href="#"><h2 class="logo">IP-G2</h2></a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Our Stories
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li>
+                                <a class="dropdown-item" href="../HTML/story1.html">Deborah Ama Paintsil</a>
+                              </li>
+                              <li>
+                                <a class="dropdown-item" href="../HTML/story2.html">Josephine Nation Ekhator</a>
+                              </li>
+                              <li>
+                                <a class="dropdown-item" href="#"
+                                  >Justus Wamswa Chemirmir</a>
+                              </li>
+                              <li>
+                                <a class="dropdown-item" href="#">Mangaliso Dlamini</a>
+                              </li>
+                              <li><a class="dropdown-item" href="#">Kevin Langat</a></li>
                         </ul>
-                    </div>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="">The Author</a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-            </nav>
+              </nav>
 
             <div class="pic-text">
                 <div class="pic-home-page">
@@ -112,7 +114,7 @@
                         </a>
                     </div>
                     <div class="hexagon hex2">
-                        <a href="">
+                        <a href="../HTML/story2.html">
                             <h2 class="desc">Josephine</h2>
                         </a>
                     </div>
