--- a/HTML/author.html
+++ b/HTML/author.html
@@ -10,7 +10,7 @@
 </head>
   <body>
     <header>
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container-md">
               <a class="navbar-brand" href="../HTML/index.html"><h2 class="logo">IP-G2</h2></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
