--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -53,7 +53,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link">The Author</a>
+                <a class="nav-link" href="../HTML/author.html">The Author</a>
               </li>
             </ul>
           </div>
