--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -362,6 +362,22 @@
         </div>
       </div>
     </div>
+
+    <section class="section3">
+      <footer>
+          <div class="jumbotron footer-jumbotron">
+              <div class="container-md">
+                  <div class="row">
+                      <div class="col-md-12 pt-3">
+                          <h3>MADE WITH LOVE</h3>
+                          <p class="mt-3">&copy; 2022 GROUP 2, All Rights Reserved</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </footer>
+    </section>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     
     <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
