--- a/HTML/author.html
+++ b/HTML/author.html
@@ -10,7 +10,7 @@
 </head>
   <body>
     <header>
-        <nav class="navbar navbar-expand-lg fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container-md">
               <a class="navbar-brand" href="../HTML/index.html"><h2 class="logo">IP-G2</h2></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,7 +19,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../HTML/index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="../HTML/index.html" style="color:white;">Home</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -49,25 +49,49 @@
               </div>
             </div>
           </nav>
-    </header>
 
-    <div class="jumbotron">
-        <div class="container-md">
-            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="..." class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
-                  </div>
+          <div class="carousel slide" data-bs-ride="carousel" id="carouselExampleCaptions">
+            <div class="carousel-inner">
+              <div class="carousel-item active bg-1">
+                <div class="carousel-caption">
+                  <h5>Deborah Ama <span>Paintsil</span></h5>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, culpa.</p>
+                  <a class="bg-danger text-black" href="#">Her Story</a>
                 </div>
               </div>
-        </div>
-    </div>
+              <div class="carousel-item bg-2">
+                <div class="carousel-caption">
+                  <h5>Josephine <span>Ekhator</span></h5>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, culpa.</p><a class="bg-warning text-white" href="#">Learn More</a>
+                </div>
+              </div>
+              <div class="carousel-item bg-3">
+                <div class="carousel-caption">
+                  <h5>Justus Wamswa <span>Chemirmir</span></h5>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, culpa.</p><a class="bg-warning text-white" href="#">Learn More</a>
+                </div>
+              </div>
+              <div class="carousel-item bg-4">
+                <div class="carousel-caption">
+                  <h5>Mangaliso <span>Dlamini</span></h5>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, culpa.</p><a class="bg-warning text-white" href="#">Learn More</a>
+                </div>
+              </div>
+              <div class="carousel-item bg-5">
+                <div class="carousel-caption">
+                  <h5>Kevin <span>Langat</span></h5>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, culpa.</p><a class="bg-warning text-white" href="#">Learn More</a>
+                </div>
+              </div>
+            </div><button class="carousel-control-prev" data-bs-slide="prev" data-bs-target="#carouselExampleCaptions" type="button"><span aria-hidden="true" class="carousel-control-prev-icon"></span> <span class="visually-hidden">Previous</span></button> <button class="carousel-control-next" data-bs-slide="next" data-bs-target="#carouselExampleCaptions" type="button"><span aria-hidden="true" class="carousel-control-next-icon"></span> <span class="visually-hidden">Next</span></button> <!--thumbnails-->
+            <div class="carousel-indicators">
+              <button aria-label="Slide 1" class="active" data-bs-slide-to="0" data-bs-target="#carouselExampleCaptions" type="button"><img class="img-fluid" src="../IMAGES/DE.jpg"></button> <button aria-label="Slide 2" data-bs-slide-to="1" data-bs-target="#carouselExampleCaptions" type="button"><img class="img-fluid" src="../IMAGES/JOSSY.jpeg"></button> <button aria-label="Slide 3" data-bs-slide-to="2" data-bs-target="#carouselExampleCaptions" type="button"><img class="img-fluid" src="../IMAGES/Justus.jpg">
+                <button aria-label="Slide 4" data-bs-slide-to="3" data-bs-target="#carouselExampleCaptions" type="button"><img class="img-fluid" src="../IMAGES/Manga.jpeg"> <button aria-label="Slide 5" data-bs-slide-to="4" data-bs-target="#carouselExampleCaptions" type="button"><img class="img-fluid" src="../IMAGES/Kein.jpg">
+              </button>
+            </div>
+          </div>
+    </header>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
 </html>
