--- a/HTML/index.html
+++ b/HTML/index.html
@@ -49,7 +49,7 @@
                         </ul>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="">The Author</a>
+                        <a class="nav-link" href="../HTML/author.html">The Author</a>
                       </li>
                     </ul>
                   </div>
