--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -61,7 +61,7 @@
       </nav>
     </header>
 
-    <div class="container py-2">
+    <div class="container py-2 cards">
       <div class="row" data-masonry='{"percentPosition": true }'>
         <div class="col-sm-4 col-md-4 py-3 ">
            <div class="card cb1 text-center">
